# Nmap Changelog ($Id$); -*-text-*-

o XML output now excludes output for down hosts when doing host
  discovery only, except in verbose mode. This is how it already
  worked for normal scans, but the ping-only case was overlooked.
  [David]

o [NSE] Added a new Web Service Dynamic Discovery library (wsdd) and the two 
  scripts broadcast-wsdd-discover and wsdd-discover. [Patrik]

o [Zenmap] Upgraded to the newer gtk.Tooltip API to avoid deprecation
  messages about gtk.Tooltip. [Rob Nicholls]

o Updated the Windows build process to work with (and require) Visual
  C++ 2010 rather than 2008.  If you want to build Zenmap too, you now
  need Python 2.7 (rather than 2.6) and GTK+ 2.22. See
  http://nmap.org/book/inst-windows.html#inst-win-source [David, Rob
  Nicholls, KX]

o [NSE] Added a new library upnp that provides UPnP support to the scripts
  upnp-info and broadcast-upnp-info. The library is largely based on code
  taken from Thomas Buchanan's upnp-info script. [Patrik]

o [NSE] Added a new library dnssd with supporting functions for DNS Service
  Discovery. Moved multicast prerule from dns-service-discovery to a new
  script called broadcast-dns-service-discovery. [Patrik]

o [NSE] Added the rmi-dumpregistry script, which shows the contents of
  Java RMI registry. [Martin Holst Swende]

o [NSE] Added the ssh2-enum-algos script which reports the number of
  algorithms the target SSH2 server supports, by type. If verbosity
  is set, then the offered algorithms are listed. Output is reduced
  for identical "client to server" and "server to client" lists by
  using a single combined list. [Kris]

o [NSE] Made dns-zone-transfer script able to add new discovered DNS
  records onto Nmap scanning queue. [Djalal]

o [NSE] Added reporting of the type and bit size of certificate public
  keys to ssl-cert.nse. [Matt Selsky]

o [NSE] Added the db2-discover script. This can find DB2 servers by
  sending a UDP broadcast. [Patrik]
